--- a/misc/planering.html
+++ b/misc/planering.html
@@ -309,9 +309,18 @@
     När jag höll på att fixa med bakgrunden passade jag även på att fixa en gammal bugg. Buggen var att det inte gick att använde skrollhjulet för att skrolla på de olika textrutorna då det även triggade eventet som gjorde att man skrollade sig vidare på sidan. 
     Jag löste dock detta genom att sätta en spärr på skolleventet som fick sidan att röra på sig när man skrollade i textrutorna. Det var väldigt trevligt att fått löst denna bugg, då det var något som var viktigt att det fungerade som tänkt.
     <h3>Lektion vecka 8</h3>
+    Idag arbetade jag med att skapa de bilder som ska användas till våra profilbilder. Jag använde mig av lagermasker för att kunna klippa ut våra ansikten och ändrade även kontrasten på bilden.
+    Efter att ha lagt in bilden tyckte jag dock att det såg lite märkligt ut att den var helt rund. Nästa vecka ska jag testa att ändra detta.
+    Fixade även diverse problem med skalning och några få färgändringar på vissa block. 
+
+    <img src="/img/SAM_image.PNG" alt="">
     <!-- Fyll på med dokumentation här. -->
 
     <h3>Lektion vecka 9</h3>
+    Idag gick mesta arbetet till att skriva på själva planeringen, jag hade lite bilder (screenshoots) som jag ville lägga in. 
+    Jag arbetade även lite mer skalningen när det gäller Matteräknaren & App sidan, vilket båda inte skapar alls bra.
+    I och med att jag har tagit bort skrollen på sidorna gör det också att sidorna inte får vara större en 100vh, vilket vissa sidor är. 
+    Det är något jag ska kolla på nästa gång. Jag ska även till nästa gång fixat photoshopsbilden till min profil. 
     <!-- Fyll på med dokumentation här. -->
 
     <h3>Lektion vecka 10</h3>
