--- a/misc/planering.html
+++ b/misc/planering.html
@@ -176,7 +176,7 @@
     I och med att alla sidor på sidan kommer vara relativt lika känns det som en bra idé att tidigt ha koll på att skalningen blir lätt att fixa.
     Blir därför mindre en pina i slutet då alla sidor är färdiga och jag märker att det är svårt att anpassa sidan även för större enheter (dator, platta)
     <br>
-    Index : <img src="/img/index_added_menu.PNG" alt="">
+    Index : <img src="index_added_menu.PNG" alt="">
 
 
     <h3>Lektion vecka 6</h3>
@@ -189,22 +189,22 @@
     Nästa vecka ska jag fortsätta med den sista sidan på skärmen till Matteräknaren samt att börja fixa på den andra sidan. 
     <br>
     Första prototypen av Skärmen : 
-    <img src="/img/MR_before_screen.PNG" alt="">
+    <img src="MR_before_screen.PNG" alt="">
     <br>
     Förstasidan (skärm) : 
-    <img src="/img/MR_added_index.PNG" alt="">
+    <img src="MR_added_index.PNG" alt="">
     <br>
     Spelsidan (skräm) - utan JavaScripten för att kunna köra uppgifterna : 
-    <img src="/img/MR_gameSite_withoutJS.PNG" alt="">
+    <img src="MR_gameSite_withoutJS.PNG" alt="">
     <br>
     Spelsidan (skärm) - med JavaScript 
-    <img src="/img/MR_gameSite_withJS.PNG" alt="">
+    <img src="MR_gameSite_withJS.PNG" alt="">
     <br>
     Layouten av sidan (utan skärm)
-    <img src="/img/MR_before_screen.PNG" alt="">
+    <img src="MR_before_screen.PNG" alt="">
     <br>
     För skalning & anpassning mellan skärmstorlek - lade till en scroll på informationsrutan : 
-    <img src="/img/MR_textarea_withScroll.PNG" alt="">
+    <img src="MR_textarea_withScroll.PNG" alt="">
 
     <h3>vecka 7</h3>
     Ändrade grid i app från 1fr & 5fr --> 1fr & 4fr för att kunna centrera titeln i blocket utan att minska avståndet från toppen. Ändrade om igen till 150px & 4fr för att få till en bra skalning!
@@ -218,7 +218,7 @@
 
     Bild på grid på desktop läge - innan ändring. Även här bestämde jag mig sen för att ändra så att titln hade en height på 150px för att jag tyckte att det gav bäst skalning. 
     <br>
-    <img src="/img/APP_grid.PNG" alt="">
+    <img src="APP_grid.PNG" alt="">
     <br>
     Första idén på hur skärmen ska fungera. Min första tanke var att precis som med Matteräknaren skapa en bild för hur mobilen skulle se ut. 
     När jag var inne i illustrator och höll på såg jag dock att det jag ville åt gick att göra mycket smidigare med endast kod. 
@@ -226,40 +226,40 @@
     En mobilram har däremot endast en border som är olika tjock beroende på om det exempelvis ska få plats kamera eller ej. Därmed valde jag att göra en border runt mobilskärmen istället för att lägga in en bild som bakgrund. 
     Min tanke är att det går snabbare att läsa in lite css än en bild och dessutom kändes det som att det var lättare om jag ville anpassa mobilens storlek efter hand om allting var i kod.
     <br>
-    <img src="/img/APP_phoneLayout.PNG" alt="">
+    <img src="APP_phoneLayout.PNG" alt="">
     <br>
     Meny-sidan för Appen. Gick väldigt smidigt att göra, hade alla mått från figma modellen i och med att jag har jobbat med att designa denna prototyp på gränssnittet. Hade även själva koden för de snurrande cirklarna från Matteräknaren. 
     <br>
-    <img src="/img/APP_menu.PNG" alt="">
+    <img src="APP_menu.PNG" alt="">
     <br>
     Som nämnt ovan har jag haft mycket problem när det gäller hur jag ska fixa skalningen för sidan. Just nu har jag inte kommit på någon bra / smidig lösning till skalningen, så det får vänta. 
     <br>
     Desktop vy - har ett grid :
     <br>
-    <img src="/img/APP_problemWithScaling1.PNG" alt="">
+    <img src="APP_problemWithScaling1.PNG" alt="">
     <br>
     Mobil vy , grid, men flex på blocken på nedre delen. Problem - Svårt att centrera de block som är klickat på (i detta fall mobilprototypen) & måste skala för att enheter (använder nu vw) :
     <br>
-    <img src="/img/APP_problemWithScaling2.PNG" alt="">
+    <img src="APP_problemWithScaling2.PNG" alt="">
     <br>
     Mobil vy, andra aktiv. Samma problem som med bilden ovan! 
     <br>
-    <img src="/img/APP_problemWithScaling3.PNG" alt="">
+    <img src="APP_problemWithScaling3.PNG" alt="">
     <br>
     Jag stötte även på problem gällade scrollen på textinformationen. På Matteräknaren-sidan lyckades jag få att texten hela tiden var 50% av blocket höjd och det som inte fick plats gick att scrolla fram. 
     Av någon outgrundlig anledning fungerade dock detta inte på denna sidan, så jag löste det genom att sätta en specifik höjd i vh på själva textrutan. 
     Det är dock inte en stabil lösning då det blir konstigt när man byter mellan enheter (layouten ändras). 
     Bild på hur det inte fungerar : 
-    <img src="/img/APP_problemWithTextHeight.PNG" alt="">
+    <img src="APP_problemWithTextHeight.PNG" alt="">
 
 
     Nu började jag arbeta med nästa sidan, vilket blev startsidan för alla våra projekt. Meningen med den sidan är att ge en snabb överblick över de projekt vi har gjort och de projekt som vi kan genomföra åt en kund. 
     Jag hade en idé här om att skapa en meny som såg ut som en spelhand när man spelar ett kortspel. Att man väljer ett av korten och att detta då ger en information inom det området. 
     Därmed började jag med att utveckla själva korthanden för att få den att fungera som jag ville med animationer och väljandet av område. 
-    <img src="/img/PROJECT_developing.PNG" alt="">
+    <img src="PROJECT_developing.PNG" alt="">
 
     För mobilen valde jag att som på de andra sidorna använda mig av ett simpelt grid med endast en kolumn.
-    <img src="/img/PROJECT_mobile_version.PNG" alt="">
+    <img src="PROJECT_mobile_version.PNG" alt="">
     På större enheter använde jag mig av ett grid med två kolumner och lade även till vår logga i en av kvadranterna. Varför jag valde att lägga till loggan var för att jag ville ha något mer som fyllde upp då det var större skärm (mer plats),
     samtidigt ville jag helst inte lägga till mer text eller andra distraktioner som jag tror skulle gjort sidan mer klottrig. Därför valde jag att endast lägga till loggan. Senare ska jag även göra den klickbar så man enkelt kan ta sig tillbaka till förstasidan. 
 
@@ -267,12 +267,12 @@
     Nästa sida att utveckla blev sidorna för att visa information om de anställda på företaget. Dessa sidor skulle alla vara edentiska med varandra, vilket gjorde att jag endast behövde göra en av denm. 
     Jag hade både gjort en skiss för desktop och för mobil för denna design, men under processen blev det några ändringar : 
     Från :
-    <img src="/img/SAM_desktopToofewThings.PNG" alt="">
+    <img src="SAM_desktopToofewThings.PNG" alt="">
     Till : 
-    <img src="/img/SAM_desktopLayoutFix.PNG" alt="">
+    <img src="SAM_desktopLayoutFix.PNG" alt="">
 
     För att jag visste att jag skulle ha flera identiska sidor använde jag mig även av en klass så att jag enkelt kunde få samma CSS på ett annat ställe. 
-    <img src="/img/SAM_class.PNG" alt="">
+    <img src="SAM_class.PNG" alt="">
     Det som är kvar på sidorna är att fixa själva bilderna och texten angående den anställda. 
 
 
@@ -282,9 +282,9 @@
     Har fortfarande ett problem gällade att man skrollar på mobilen och att det då inte går att ta sig till nästa sida, utan man sitter fast på den sidan --> Fixar senare genom att korta ner sidan och endast har skroll på en del. 
     
     Skalning fungerar ej för tablet :
-    <img src="/img/o44_noScalingForTablet.PNG" alt="">
+    <img src="o44_noScalingForTablet.PNG" alt="">
     Scrollbart block. 
-    <img src="/img/o44_blockToBeAbleToScroll.PNG" alt="">
+    <img src="o44_blockToBeAbleToScroll.PNG" alt="">
 
 
     Den sista sidan som jag byggde var sidan för att kontakta företaget. På denna sida finns det information om hur du når företaget eller dess personal. 
@@ -295,16 +295,16 @@
 
     Nu när alla sidor är klara bestämde jag mig för att börja kolla på att animera sidorna. Första steget i detta var att fixa en rörlig bakgrund.
     Jag ville skapa en bakgrund som satte en färgklick på sidan samtidigt som att den inte skulle vara allt för distraherande. Jag kom upp med detta : 
-    <img src="/img/INDEX_with_background.PNG" alt="">
+    <img src="INDEX_with_background.PNG" alt="">
     Det som händer är att jag har 8st block som alla är formade som en kvadrat. Dessa blocken åker i olika takt från mitten och utåt till vart sitt hörn på en oktagon. 
     Samtidigt snurrar de även runt sin egen axel för att ge känslan av att de faktiskt svävar fram och inte åker. I och med att alla blocken tar olika lång tid på sig tar det alltså väldigt lång tid innan samma mönster upprepar sig. 
     Det gör att fastän exempelvis det oranga blocket alltid åker till samma ställe och alltid är samma storlek är det inget man tänker på, då det blir så "rörigt" i mitten. 
 
     Ändrade även om INDEX-sidan : 
     från : 
-    <img src="/img/index_added_menu.PNG" alt="">
+    <img src="index_added_menu.PNG" alt="">
     till :
-    <img src="/img/INDEX_changedMenu.PNG" alt="">
+    <img src="INDEX_changedMenu.PNG" alt="">
 
     När jag höll på att fixa med bakgrunden passade jag även på att fixa en gammal bugg. Buggen var att det inte gick att använde skrollhjulet för att skrolla på de olika textrutorna då det även triggade eventet som gjorde att man skrollade sig vidare på sidan. 
     Jag löste dock detta genom att sätta en spärr på skolleventet som fick sidan att röra på sig när man skrollade i textrutorna. Det var väldigt trevligt att fått löst denna bugg, då det var något som var viktigt att det fungerade som tänkt.
@@ -313,7 +313,7 @@
     Efter att ha lagt in bilden tyckte jag dock att det såg lite märkligt ut att den var helt rund. Nästa vecka ska jag testa att ändra detta.
     Fixade även diverse problem med skalning och några få färgändringar på vissa block. 
 
-    <img src="/img/SAM_image.PNG" alt="">
+    <img src="SAM_image.PNG" alt="">
     <!-- Fyll på med dokumentation här. -->
 
     <h3>Lektion vecka 9</h3>
