--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
             <li><div></div></li>
             <li><div></div></li>
          </ul>
+         <article class="upwards">
+             <p><</p>
+         </article>
+         <article class="downwards">
+            <p>></p>
+         </article>
     </div>
     <div id="container">
         <div class="circle">
@@ -124,18 +130,18 @@
                                 <div></div>
                                 <h1>Samuel</h1>
                                 <div>
-                                    <p>Mail</p>
-                                    <p>Linked in</p>
-                                    <p>Instagram</p>
+                                    <img src="/img/linkedin.png" alt="">
+                                    <img src="/img/gmail.png" alt="">
+                                    <img src="/img/instagram.webp" alt="">
                                 </div>
                             </article>
                             <article>
-                                <div></div>
+                                <div class="jonas"></div>
                                 <h1>Jonas</h1>
                                 <div>
-                                    <p>Mail</p>
-                                    <p>Linked in</p>
-                                    <p>Instagram</p>
+                                    <img src="/img/linkedin.png" alt="">
+                                    <img src="/img/gmail.png" alt="">
+                                    <img src="/img/instagram.webp" alt="">
                                 </div>
                             </article>
                         </section>
@@ -162,7 +168,7 @@
                         <h2>-vd</h2>
                     </header>
                     <main>
-                        <div></div>
+                        <div class="jonas"></div>
                     </main>
                     <article class="emLogo">
                         <h2 class="the">The</h2>
