Small fixes + planering
...

--- a/misc/planering.html
+++ b/misc/planering.html
@@ -324,10 +324,17 @@
     <!-- Fyll på med dokumentation här. -->
 
     <h3>Lektion vecka 10</h3>
+    Idag löste jag ett problem som uppstod för några veckor sedan. Problemet var att på vissa sidor fick inte alla block plats på mobilversionen, det behövdes därför kunna scrollas.
+    Problemet med detta är dock att på skrollen ska man kunna skrolla mellan de olika sidorna / vyerna, vilket gör att jag behövde fixa ett nytt sätt att byta sida. 
+    Det jag gjorde var därmed att lägga till två st pilar som indikerar att man tar sig till nästa respektive föregående sida. Lade även till så att skrollen är av på de sidor där man behövde
+    kunna skrolla på sidan, medans det fick att skrolla på alla andra ställen. 
+    I förbifarten fixade jag även så att kan inte kunde skrolla under tiden som animationen till nästa sidan var aktiv. Det känns som att detta kommer 
+    göra så att man inte råkar trycka sig för långt fram på sidorna, dock kan det vara en nackdel om man snabbt vill klicka sig framåt. 
     <!-- Fyll på med dokumentation här. -->
 
     <h3>Lektion vecka 11</h3>
     <!-- Fyll på med dokumentation här. -->
+    
 
     <h3>Lektion vecka 12</h3>
     <!-- Fyll på med dokumentation här. -->
