--- a/test.html
+++ b/test.html
@@ -59,6 +59,17 @@
         .flexClass {
             display: flex;
         }
+
+        .animation0 {
+            animation: rotate 1s linear;
+        }
+        .animation1  {
+            animation: rotate 1s linear reverse;
+        }
+        @keyframes rotate {
+            0% {transform: rotateY(0deg);}
+            100% {transform: rotateY(90deg);}
+        }
         
     </style>
 </head>
@@ -88,9 +99,25 @@
 </body>
 
     <script>
+        i = 0;
+        active = false;
         $(".info, button").click(function () {
-            $("button").toggleClass("flexClass");
-            $(".info").toggleClass("flexClass");
+            if(!active) {
+                active = true;
+                $("button").toggleClass("animation" + (i % 2));
+                $(".info").toggleClass("animation" + ( (i + 1) % 2));
+                
+                setTimeout(function () {
+                    $("button").toggleClass("flexClass");
+                    $(".info").toggleClass("flexClass");
+                }, 1000)
+                setTimeout(function () {
+                    $("button").toggleClass("animation" + (i % 2));
+                    $(".info").toggleClass("animation" + ( (i + 1) % 2));
+                    i++;
+                    active = false;
+                }, 2000)
+            }
         })
     </script>
 
