Added my profile + testing
...

--- a/misc/planering.html
+++ b/misc/planering.html
@@ -328,11 +328,20 @@
     Problemet med detta är dock att på skrollen ska man kunna skrolla mellan de olika sidorna / vyerna, vilket gör att jag behövde fixa ett nytt sätt att byta sida. 
     Det jag gjorde var därmed att lägga till två st pilar som indikerar att man tar sig till nästa respektive föregående sida. Lade även till så att skrollen är av på de sidor där man behövde
     kunna skrolla på sidan, medans det fick att skrolla på alla andra ställen. 
+    Med dessa knappar blir sidan även mer anpassad till alla användare. Detta gör att det kommer finnas ännu ett sätt att byta sida för de användare som är ovana vid denna högteknologiska och innovativa scrollning som faktiskt finns på denna sida. 
     I förbifarten fixade jag även så att kan inte kunde skrolla under tiden som animationen till nästa sidan var aktiv. Det känns som att detta kommer 
     göra så att man inte råkar trycka sig för långt fram på sidorna, dock kan det vara en nackdel om man snabbt vill klicka sig framåt. 
     <!-- Fyll på med dokumentation här. -->
 
     <h3>Lektion vecka 11</h3>
+    Idag började jag göra alla tester på sidan. 
+    Jag gjorde kontrasttesterna och fick utmärkt resultat. Det var dock väntat då jag hade tänkt på att göra det tydligt med väldigt mörk bakgrund och vit text. 
+
+    När det gällde valideringen av HTML:n stötte jag på några problem med att man inte kunde ha flera main i samma HTML dokument.
+    På min sida är det dock flera sidor i samma HTML dokument vilket gjorde att jag kände att jag ville ha fler Main:s hoppas det är okej. 
+
+    När det gäller validering av CSS var det inga större problem. Det var dock lite klagomål på alla mina CSS-variabler men det är inte riktigt något jag kan göra åt då de används för min skalning. 
+    
     <!-- Fyll på med dokumentation här. -->
     
 
