--- a/misc/planering.html
+++ b/misc/planering.html
@@ -342,6 +342,9 @@
 
     När det gäller validering av CSS var det inga större problem. Det var dock lite klagomål på alla mina CSS-variabler men det är inte riktigt något jag kan göra åt då de används för min skalning. 
     
+    Jag han även med att göra photoshop-bilden på mig som ska ligga på sidan "om oss". Det tog dock lite extra tid då jag inte riktigt kom ihåg
+    hur photoshop fungerade. Började med att klippa ut bilden och lade den som en lagermask och sedan satte jag ett filter på den.
+
     <!-- Fyll på med dokumentation här. -->
     
 
