--- a/index.html
+++ b/index.html
@@ -63,11 +63,13 @@
                         <article>
                             <h1>Beställ en Hemsida</h1>
                             <div>
-                                <b>Things</b>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit excepturi, quo necessitatibus, unde incidunt libero illo quae officia consequuntur optio sapiente tenetur atque, delectus nemo.</p>
-                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate unde accusamus magnam atque voluptate incidunt ipsum deleniti hic molestias quaerat.</p>
-                                <b>Others</b>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem enim mollitia ad ducimus quod ullam voluptatum quas eum animi quae? Magnam quam consequatur magni est quaerat quidem nesciunt, reiciendis ad.</p>
+                                <b>Företagssida</b>
+                                <p>Hos oss kan du enkelt beställa en hemsida till ditt företag. Vi bygger den helt från scratch med ren kod (t.ex inte wordpress) och du bestämmer helt vilka funktioner som du vill ha på din sida. </p>
+                                <p>Exempel:</p>
+                                <p>Jonas behöver en hemsida till sitt företag som säljer honung. Han vill ha honung i fokus och på sidan ska man kunna beställa honung samt att se standard information om hemsidan. Han skulle även älska om man live kunde se innuti bikupan där han nyligen har satt upp en kamera. Vi som företag kan fixa detta till en rimlig penning.</p>
+                                <p>Beställning görs genom att kontakta oss, pris beräknas beroende på sidans komplexitet (funktioner och storlek på sidan)</p>
+                                <b>Blogg</b>
+                                <p>Vi erbjuder även att skapa diverse bloggar och liknande där du kan skapa din egen krets med personer....</p>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, ad.</p>
                                 <b>Others</b>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem enim mollitia ad ducimus quod ullam voluptatum quas eum animi quae? Magnam quam consequatur magni est quaerat quidem nesciunt, reiciendis ad.</p>
@@ -120,7 +122,7 @@
                         </section>
                         <section>
                             <article>
-                                <div></div>
+                                <div class="samuel"></div>
                                 <h1>Samuel</h1>
                                 <div>
                                     <img src="/img/linkedin.png" alt="">
@@ -308,7 +310,7 @@
                         <h2>-vd</h2>
                     </header>
                     <main>
-                        <div></div>
+                        <div class="samuel"></div>
                     </main>
                     <article class="emLogo">
                         <h2 class="the">The</h2>
