--- a/misc/planering.html
+++ b/misc/planering.html
@@ -364,6 +364,10 @@
 
     Fixade skalningen på anställdasidan. 
 
+    Jag har länge haft problem vad gäller skalningen på "App-sidan" och nu lyckades jag fixa delar av den. Planen var att göra om det från början när det gäller css:n. 
+    Problemet innan var att de olika blocken för information och själva prototypen var olika stora, vilket gjorde att blocken 
+
+
     <!-- Fyll på med dokumentation här. -->
 
     <h2>4. Testning</h2>
