--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <title>The o44 Project</title>
@@ -125,18 +125,18 @@
                                 <div class="samuel"></div>
                                 <h1>Samuel</h1>
                                 <div>
-                                    <img src="/img/linkedin.png" alt="">
-                                    <img src="/img/gmail.png" alt="">
-                                    <img src="/img/instagram.webp" alt="">
+                                    <img src="img/linkedin.png" alt="">
+                                    <img src="img/gmail.png" alt="">
+                                    <img src="img/instagram.webp" alt="">
                                 </div>
                             </article>
                             <article>
                                 <div class="jonas"></div>
                                 <h1>Jonas</h1>
                                 <div>
-                                    <img src="/img/linkedin.png" alt="">
-                                    <img src="/img/gmail.png" alt="">
-                                    <img src="/img/instagram.webp" alt="">
+                                    <img src="img/linkedin.png" alt="">
+                                    <img src="img/gmail.png" alt="">
+                                    <img src="img/instagram.webp" alt="">
                                 </div>
                             </article>
                         </section>
@@ -235,14 +235,14 @@
                                         <div class="movingCircle" id="movingCircle1"></div>
                                         <div class="movingCircle" id="movingCircle2"></div>
                                         <h1>MATH</h1>
-                                        <img src="/img/Ai.svg" alt="profile_figure">
+                                        <img src="img/Ai.svg" alt="profile_figure">
                                     </div>
                                     <div class="appMenu">
                                         <nav>
-                                            <img class="appMenuButton" src="/img/menu-24px.svg" alt="menu">
+                                            <img class="appMenuButton" src="img/menu-24px.svg" alt="menu">
                                             <div>
                                                 <p>20x</p>
-                                                <img src="/img/ruby_color.svg" alt="ruby">
+                                                <img src="img/ruby_color.svg" alt="ruby">
                                             </div>
                                         </nav>
                                         <header>
@@ -258,7 +258,7 @@
                                                 </div>
                                                 <div class="appCon">
                                                     <div class="appImg">
-                                                        <img src="/img/Ai.svg" alt="profile_figure">
+                                                        <img src="img/Ai.svg" alt="profile_figure">
                                                     </div>
                                                     
                                                     <div class="appText">
@@ -500,6 +500,6 @@
     </div>
 </body>
 
-<script src="/js/core.js"></script>
+<script src="js/core.js"></script>
 
 </html>
