--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                             <h2>-vd</h2>
                         </header>
                         <main>
-                            <div class="jonas"></div>
+                            <img src="img/PictureJonas.png" alt="jonas_vd">
                         </main>
                         <article class="emLogo">
                             <h2 class="the">The</h2>
@@ -311,7 +311,7 @@
                             <h2>-vd</h2>
                         </header>
                         <main>
-                            <div class="samuel"></div>
+                            <img src="img/samuel.png" alt="samuel_vd">
                         </main>
                         <article class="emLogo">
                             <h2 class="the">The</h2>
